--- a/assets/stylus/vars.styl
+++ b/assets/stylus/vars.styl
@@ -4,7 +4,7 @@ $yellow     = #FFBC0D
 $yellowDark = #ED8C00
 $orange     = #FC4D0F
 $white      = #ffffff
-$grey       = #E6E7E8
+$grey       = #999999
 $black      = #000000
 $dark       = #222222
 $disable    = #363636
