added mem,news props,fix dbjson

--- a/assets/stylus/base.styl
+++ b/assets/stylus/base.styl
@@ -33,6 +33,17 @@ body
     overflow hidden
     touch-action none
     -ms-touch-action none
+  &:after
+    content ''
+    position absolute
+    top -100px
+    width 100%
+    height 680px
+    background-image url(/svg/bg-top.svg)
+    background-repeat no-repeat;
+    background-size 4096px 680px
+    background-position 50% 100%
+    z-index -1
 
 .main
   display flex
@@ -83,6 +94,7 @@ a
 .layout
   display flex
   flex-direction column
+  // justify-content space-between
   min-height 100vh
 
 ul
@@ -93,5 +105,8 @@ ul
 video::-webkit-media-controls
   display none !important
 
+h1
+  fontSzLh(30,34)
+  font-weight 400
 .hidden_header
   display none
