--- a/assets/stylus/vars.styl
+++ b/assets/stylus/vars.styl
@@ -1,5 +1,5 @@
 $red      = #E7470B
-$greenLight = #327C78
+$anthracite = #1A1A1A
 $yellow     = #FFBC0D
 $yellowDark = #ED8C00
 $orange     = #FC4D0F
