fix many bugs) new components

--- a/assets/stylus/vars.styl
+++ b/assets/stylus/vars.styl
@@ -1,14 +1,13 @@
-$red      = #E7470B
-$anthracite = #1A1A1A
 $yellow     = #FFBC0D
-$yellowDark = #ED8C00
 $orange     = #FC4D0F
 $white      = #ffffff
 $grey       = #999999
 $black      = #000000
 $dark       = #222222
+$anthracite = #1A1A1A
 $disable    = #363636
 $back       = #0f0d0c
+$border     = #3a3a3a
 /* END: colors*/
 
 $font = 'Roboto'
